MODIFY: index.html file

--- a/index.html
+++ b/index.html
@@ -1,1 +1,20 @@
 <!DOCTYPE html>
+<html>
+    <head>
+        <title>Predicta Expense</title>
+        <h1>Predicta Expense</h1>
+        <link rel="stylesheet" href="style.css">
+
+    </head>
+    <body>
+        <a href="budget.html"><button>Add Budget</button></a>
+        <button>Add EXPENSE</button>
+        <button>weekly report</button>
+        <button>history</button>
+        <button>warnings</button>
+        <button>insights and strategies</button>
+        <button>exit</button>
+
+
+    </body>
+</html>
