MODIFY: index.html file

--- a/index.html
+++ b/index.html
@@ -23,23 +23,23 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>FinTrack - Your Financial Partner</title>
+    <title>Predicta Expense- Your Financial Partner</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
     <header class="header">
-        <h1 class="logo">FinTrack</h1>
+        <h1 class="logo">Predicta Expense</h1>
         <nav class="nav">
             <a href="index.html" class="nav-link">Home</a>
             <a href="expenses.html" class="nav-link">Add Expense</a>
-            <a href="prediction.html" class="nav-link">Predictor</a>
+            <a href="budget.html" class="nav-link">Budget</a>
         </nav>
     </header>
 
     <main class="main-content homepage">
         <section class="intro-section">
-            <h2>Welcome to FinTrack</h2>
+            <h2>Welcome to Predicta Expense</h2>
             <p>Your personal expense tracker and financial predictor. Take control of your finances and plan for the future with ease.</p>
             <div class="homepage-buttons">
                 <a href="expenses.html" class="btn">Add New Expense</a>
