MODIFY: index.html file

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
     </main>
 
     <footer class="footer">
-        <p>&copy; 2025 FinTrack. All rights reserved.</p>
+        <p>&copy; 2025 Predicta Expense. All rights reserved.</p>
     </footer>
 
 </body>
