MODIFY: index.html file

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     <main class="main-content homepage">
         <section class="intro-section">
             <h2>Welcome to Predicta Expense</h2>
-            <p>Your personal expense tracker and financial predictor. Take control of your finances and plan for the future with ease.</p>
+            <p>Your personal expense tracker and financial predictor. Take control of your finances and predict your savings future with ease.</p>
             <div class="homepage-buttons">
                 <a href="expenses.html" class="btn">Add New Expense</a>
                 <a href="prediction.html" class="btn">View Predictions</a>
