MODIFY: index.html file

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&family=Sansita:ital,wght@0,400;0,700;0,800;0,900;1,400;1,700;1,800;1,900&display=swap" rel="stylesheet">
    <!--add a favicon here -->
+   <link rel="icon" type="image/png" href="favicon_1.png">
 </head>
 <body>
 
@@ -20,15 +21,13 @@
             
             <a href="budget.html"><button>Add BUDGET</button></a>
             <a href="expense.html"><button>Add EXPENSE</button></a>
-            <a href="warning.html"><button>WARNINGS</button></a>
+            <a href="warnings.html"><button>WARNINGS</button></a>
             <a href="week.html"><button>Weekly LOG</button></a>
             <a href="history.html"><button>All-time HISTORY</button></a>
-            <a href="insights.html"><button>Insights AND strategies</button></a>
+            <a href="insights.html"><button>Insights AND Strategies</button></a>
             <a href="exit.html"><button>EXIT</button></a>
-
         </nav>
-    </header>
-
+        </header>
     <main class="homepage">
         <section class="section">
             
