--- a/budget.html
+++ b/budget.html
@@ -3,11 +3,15 @@
 <html lang="en">
 <head>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    </head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+
+    <link rel="icon" type="image/png" href="favicon_1.png">
+
     <a href="index.html"><button><i class="fas fa-home"></i></button></a>
+    
+
     </head>
 </html>
 <body>
@@ -17,8 +21,7 @@
             <div class="hsub">Add BUDGET</div><br>
             <a href="expense.html"><button>Add EXPENSE</button></a>
             <a href="warnings.html"><button>WARNINGS</button></a>
-            <a href="week.html"><button>Weekly LOG</button></a>
-            <a href="history.html"><button>All-time HISTORY</button></a>
+            <a href="log.html"><button>Expense LOG</button></a>
             <a href="insights.html"><button>Insights AND Strategies</button></a>
             
         </nav>
