MODIFY: index.html file

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Predicta Expense- Your Financial Partner</title>
@@ -14,16 +15,16 @@
 </head>
 <body>
 
-    <header class="header">
+    <header class="header"><img src="logo.png" alt="Predicta Expense logo" class="site-logo">
+
         <div id="h1d">Predicta Expense</div>
         
         <nav class="nav">
+            <a href="budget.html"html"><button>Add BUDGET</button></a>
             
-            <a href="budget.html"><button>Add BUDGET</button></a>
             <a href="expense.html"><button>Add EXPENSE</button></a>
             <a href="warnings.html"><button>WARNINGS</button></a>
-            <a href="week.html"><button>Weekly LOG</button></a>
-            <a href="history.html"><button>All-time HISTORY</button></a>
+            <a href="log.html"><button>Expense LOG</button></a>
             <a href="insights.html"><button>Insights AND Strategies</button></a>
             <a href="exit.html"><button>EXIT</button></a>
         </nav>
