--- a/insights.html
+++ b/insights.html
@@ -8,7 +8,8 @@
         <link rel="stylesheet" href="style.css">
         <link rel="icon" type="image/png" href="favicon_1.png">
         
-        <a href="index.html"><button><i class="fas fa-home"></i></button></a>
+        <a href="index.html"><button id="icohome"><i class="fas fa-home"></i></button></a>
+
     </head>
     <body>
         <header id="navsub">
