--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"> <!--link to font awesome website for home icons-->
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Predicta Expense- Your Financial Partner</title>
+        <title>Predicta Expense- Your Financial Agent</title>
         <link href="https://fonts.googleapis.com/css2?family=Sansita:ital,wght@0,400;0,700;0,800;0,900;1,400;1,700;1,800;1,900&display=swap" rel="stylesheet"> <!--link to google fonts for font styles access-->
         <link rel="stylesheet" href="style.css">
         <link rel="icon" type="image/png" href="favicon_1.png">
