MODIFY: insights.html file

--- a/insights.html
+++ b/insights.html
@@ -1,4 +1,4 @@
-<!--insights file for generating insights in the webpage-->
+<!--insights and startegies page-->
 <!DOCTYPE html>
 <html lang="en">
     <head>
@@ -12,7 +12,7 @@
 
     </head>
     <body>
-        <header id="navsub">
+        <header id="navsub"><!--navigation bar-->
             <nav class="nav">
                 <div class="hsub">Insights AND Strategies</div><br>
                 <a href="budget.html"><button>Add BUDGET</button></a>
