MODIFY: expense.html file

--- a/expense.html
+++ b/expense.html
@@ -1,4 +1,4 @@
-<!--HTML code for expense logging webpage-->
+<!--expense logging page-->
 <!DOCTYPE html>
 <html lang="en">
     <head>
@@ -13,7 +13,7 @@
     </head>
 
     <body>
-        <header id="navsub">
+        <header id="navsub"><!--navigation bar-->
             <nav class="nav">
                 <div class="hsub">Add EXPENSE</div><br>
                     <a href="budget.html"><button>Add BUDGET</button></a>
