--- a/log.html
+++ b/log.html
@@ -1,4 +1,4 @@
-<!--log file for logging interface-->
+<!--log page which includes weekly and all-time log -->
 <!DOCTYPE html>
 <html lang="en">
     <head>
@@ -12,7 +12,7 @@
 
     </head>
     <body>
-        <header id="navsub">
+        <header id="navsub"><!--navigation bar-->
             <nav class="nav">
                 <div class="hsub">Expense LOG</div><br>
                 <a href="budget.html"><button>Add BUDGET</button></a>
