MODIFY: warnings.html file

--- a/warnings.html
+++ b/warnings.html
@@ -1,4 +1,4 @@
-<!--warnings file for generating related warnings-->
+<!--warning generation page-->
 <!DOCTYPE html>
 <html lang="en">
     <head>
@@ -12,7 +12,7 @@
 
     </head>
     <body>
-        <header id="navsub">
+        <header id="navsub"><!--navigation bar-->
             <nav class="nav">
                 <div class="hsub">WARNINGS</div><br>
                 <a href="budget.html"><button>Add BUDGET</button></a>
