MODIFY: budget.html file

--- a/budget.html
+++ b/budget.html
@@ -1,4 +1,4 @@
-<!--HTML file for budget setup page-->
+<!--budget setting page-->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -13,7 +13,7 @@
     
 </head>
 <body>
-    <header id="navsub"> 
+    <header id="navsub"> <!--navigation bar-->
         <nav class="nav">
             <div class="hsub">Add BUDGET</div><br>
             <a href="expense.html"><button>Add EXPENSE</button></a>
