--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
         <link rel="icon" type="image/png" href="favicon_1.png">
     </head>
     <body>
-        <header class="header"><img src="logo.png" alt="Predicta Expense logo" class="site-logo">
+        <header class="header"><img src="logo.png" alt="Predicta Expense logo" class="site-logo"> <!--logo of Predicta expense-->
             <div id="h1d">Predicta Expense</div>
-                <nav class="nav">
+                <nav class="nav"> <!--homepage navigation-->
                     <a href="budget.html"html"><button>Add BUDGET</button></a>
                     <a href="expense.html"><button>Add EXPENSE</button></a>
                     <a href="warnings.html"><button>WARNINGS</button></a>
@@ -25,11 +25,11 @@
         </header>
         <main class="homepage">
             <section class="section">
-                <h2>Welcome to Predicta Expense</h2>
+                <h2>Welcome to Predicta Expense</h2><!--headline/goal of Predicta expense-->
                     <p>Your personal expense tracker and financial predictor. Take control of your finances and predict your savings future with ease.</p>
             </section><br>
                 <h2 id="h2id">Features</h2>
-            <section class ="mainfeatures">
+            <section class ="mainfeatures"> <!--feature cards-->
                 <div class="features">
                     <h3>Simple & Classy UI</h3>
                         <p>Enjoy a clean, modern interface that’s easy to use.</p>
@@ -54,7 +54,7 @@
         </main>
 
         <footer class="footer">
-            <p>&copy; 2025 Predicta Expense. All rights reserved.</p>
+            <p>&copy; 2025 Predicta Expense. All rights reserved.</p> <!--copyright-->
         </footer>
     </body>
 </html>
