MODIFY: expense.html file

--- a/expense.html
+++ b/expense.html
@@ -8,7 +8,7 @@
         <link rel="stylesheet" href="style.css">
         <link rel="icon" type="image/png" href="favicon_1.png">
 
-        <a href="index.html"><button id="icohome"><i class="fas fa-home"></i></button></a>
+        <a href="index.html"><button class="icohome"><i class="fas fa-home"></i></button></a>
 
     </head>
 
