MODIFY: index.html file

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                     <a href="log.html"><button>Expense LOG</button></a>
                     <a href="insights.html"><button>Insights AND Strategies</button></a>
                     <a href="exit.html"><button>EXIT</button></a>
-                    <a href=""><button class="icohome" style="width:auto;font-size: 15px;background-color:rgba(187, 51, 43, 0.652);color: rgb(31, 17, 45);">Issue/Feedback</button></a>
+                    <a href="https://github.com/tecnolgd/front-dev-yc/issues"><button class="icohome" style="width:auto;font-size: 15px;background-color:rgba(187, 51, 43, 0.652);color: rgb(31, 17, 45);">Issue/Feedback</button></a>
                 </nav>
         </header>
         <main class="homepage">
