--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                     <a href="warnings.html"><button>WARNINGS</button></a>
                     <a href="log.html"><button>Expense LOG</button></a>
                     <a href="insights.html"><button>Insights AND Strategies</button></a>
-                    <a href="https://github.com/tecnolgd/front-dev-yc/issues"><button class="icohome" style="width:auto;font-size: 15px;background-color:rgba(187, 51, 43, 0.652);color: rgb(31, 17, 45);">Issue/Feedback</button></a>
+                    <a href="feedback.html"><button style="background-color: rgb(245, 75, 75);width: 140px;">Issue/Feedback</button></a>
                 </nav>
         </header>
         <main class="homepage">
