MODIFY: log.html file

--- a/log.html
+++ b/log.html
@@ -27,6 +27,7 @@
                 <a href="expense.html"><button>Add EXPENSE</button></a>
                 <a href="warnings.html"><button>WARNINGS</button></a>
                 <a href="insights.html"><button>Insights AND Strategies</button></a>
+                <a href="feedback.html"><button style="background-color: rgb(245, 75, 75);width: 140px;">Issue/Feedback</button></a>
             </nav>
         </header>
         <main class="homepage">
