--- a/expense.html
+++ b/expense.html
@@ -29,7 +29,7 @@
                     <a href="warnings.html"><button>WARNINGS</button></a>
                     <a href="log.html"><button>Expense LOG</button></a>
                     <a href="insights.html"><button>Insights AND Strategies</button></a>
-            
+                    <a href="feedback.html"><button style="background-color: rgb(245, 75, 75);width: 140px;">Issue/Feedback</button></a>
             </nav>
         </header>
 
