MODIFY: feedback.html file

--- a/feedback.html
+++ b/feedback.html
@@ -44,16 +44,7 @@ Write what you mean to write. Your feedback is appreciated and means a lot.
     <!-- Embed the Google Form here -->
     <div class="feature" style="width: auto; height: auto;">
         <!-- 🚨 IMPORTANT: Replace the iframe content below with the exact code copied from your Google Form 🚨 -->
-        <iframe 
-            src="<iframe src="https://docs.google.com/forms/d/e/1FAIpQLScpgXw2PeE8icPvC4NQ79clz5CGjnJmpBIiQV5q7azBE96dEg/viewform?embedded=true" 
-            width="100%" 
-            height="600" 
-            frameborder="0" 
-            marginheight="0" 
-            marginwidth="0"
-            title="Anonymous Predicta Expense Feedback Form">
-            Loading Feedback Form...
-        </iframe>
+        <iframe src="https://docs.google.com/forms/d/e/1FAIpQLScpgXw2PeE8icPvC4NQ79clz5CGjnJmpBIiQV5q7azBE96dEg/viewform?embedded=true" width="640" height="1045" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
         <!-- End of embedded Google Form -->
             </section>
         </main>
