MODIFY: feedback.html file

--- a/feedback.html
+++ b/feedback.html
@@ -37,8 +37,7 @@
         Feedback for Predicta Expense Design
     </h2>
     <pre id="h2id" style="text-align: start;">
-Help us improve the User Experience! This form is completely anonymous and requires no personal information.
-Write what you mean to write. Your feedback is appreciated and means a lot.
+Help us improve the User Experience! 
     </pre>
 
     <!-- Embed the Google Form here -->
