--- a/feedback.html
+++ b/feedback.html
@@ -23,11 +23,12 @@
     <body>
         <header id="navsub"><!--navigation bar-->
             <nav class="nav">
-                <div class="hsub">WARNINGS</div><br>
+                <div class="hsub">FEEDBACK</div><br>
                 <a href="budget.html"><button>Add BUDGET</button></a>
                 <a href="expense.html"><button>Add EXPENSE</button></a>
                 <a href="log.html"><button>Expense LOG</button></a>
                 <a href="insights.html"><button>Insights AND Strategies</button></a>
+                <a href="warnings.html"><button>WARNINGS</button></a>
                 
             </nav>
         </header>
