--- a/feedback.html
+++ b/feedback.html
@@ -29,7 +29,6 @@
                 <a href="log.html"><button>Expense LOG</button></a>
                 <a href="insights.html"><button>Insights AND Strategies</button></a>
                 <a href="warnings.html"><button>WARNINGS</button></a>
-                
             </nav>
         </header>
         <main class="homepage">
@@ -43,7 +42,7 @@ Help us improve the User Experience!
 
     <!-- Embed the Google Form here -->
     <div class="feature" style="width: auto; height: auto;">
-        <!-- 🚨 IMPORTANT: Replace the iframe content below with the exact code copied from your Google Form 🚨 -->
+        <!--Google form link -->
         <iframe src="https://docs.google.com/forms/d/e/1FAIpQLScpgXw2PeE8icPvC4NQ79clz5CGjnJmpBIiQV5q7azBE96dEg/viewform?embedded=true" width="640" height="1045" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
         <!-- End of embedded Google Form -->
             </section>
