MODIFY: index.html file

--- a/index.html
+++ b/index.html
@@ -15,7 +15,11 @@
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"> <!--link to font awesome website for home icons-->
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Predicta Expense- Your Financial Agent</title>
+        <title>Predicta Expense App UI/UX Design - Modern Financial Dashboard Prototype</title>
+        <meta name="description" content="Explore Predicta Expense, a modern, responsive UI/UX design in-progress prototype for a personal finance and expense tracking web application. Built with HTML5 & CSS for web-first user feedback."> <!--desciption shown in google searches-->
+
+        <meta property="og:url" content="https://tecnolgd.github.io/Predicta-Expense-Web/"> <!--SEO friendly meta tags-->
+
         <link href="https://fonts.googleapis.com/css2?family=Sansita:ital,wght@0,400;0,700;0,800;0,900;1,400;1,700;1,800;1,900&display=swap" rel="stylesheet"> <!--link to google fonts for font styles access-->
         <link rel="stylesheet" href="style.css">
         <link rel="icon" type="image/png" href="favicon_1.png">
