--- a/log.html
+++ b/log.html
@@ -14,7 +14,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="style.css">
-        <link rel="icon" type="image/png" href="favicon_1.png">
+        <link rel="icon" type="image/png" href="favicon_2.png">
         
         <a href="index.html"><button class="icohome"><i class="fas fa-home"></i></button></a>
 
@@ -33,8 +33,8 @@
         <main class="homepage">
             <section class="section">
                 <h2>Check your LOG reports</h2>
-                <button>WEEKLY log</button>
-                <button>All time log</button>
+                <button style="flex-wrap: wrap;">WEEKLY log</button>
+                <button style="flex-wrap:wrap;">All time log</button>
             </section>
         </main>
     </body>
