MODIFY: expense.html file

--- a/expense.html
+++ b/expense.html
@@ -15,7 +15,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="style.css">
-        <link rel="icon" type="image/png" href="favicon_1.png">
+        <link rel="icon" type="image/png" href="favicon_2.png">
 
         <a href="index.html"><button class="icohome"><i class="fas fa-home"></i></button></a>
 
@@ -41,8 +41,8 @@
                         <input type="text" id="source" name="text" required placeholder="Enter Source/Item","text">
                         <label for="cost">Cost:</label>
                         <input type="number" id="cost" name="number" required placeholder="Enter cost", "number">
-                        <button type="submit">Submit</button>
-                        <button type="reset">Reset</button>
+                        <button type="submit" style="width:auto;">Submit</button>
+                        <button type="reset" style="width:auto;">Reset</button>
                     </form>
             </section>
         </main>
