--- a/log.html
+++ b/log.html
@@ -33,8 +33,8 @@
         <main class="homepage">
             <section class="section">
                 <h2>Check your LOG reports</h2>
-                <button style="flex-wrap: wrap;">WEEKLY log</button>
-                <button style="flex-wrap:wrap;">All time log</button>
+                <button style="margin-bottom: 4px;">WEEKLY log</button>
+                <button style="margin-bottom: 4px;">All time log</button>
             </section>
         </main>
     </body>
