--- a/feedback.html
+++ b/feedback.html
@@ -43,6 +43,9 @@ Help us improve the User Experience!
     <!-- Embed the Google Form here -->
     <div class="feature" style="width: auto; height:auto;">
         <!--Google form link -->
+        <pre>For Github users : (direct to Github issues tab)</pre>
+        <a href=""><button style="background-color: rgb(141, 230, 197);">Issue</button></a>
+        <pre>For general users(including Github users if interested) :</pre>
         <iframe src="https://docs.google.com/forms/d/e/1FAIpQLScpgXw2PeE8icPvC4NQ79clz5CGjnJmpBIiQV5q7azBE96dEg/viewform?embedded=true" width="500" height="750" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
         <!-- End of embedded Google Form -->
             </section>
