--- a/warnings.html
+++ b/warnings.html
@@ -35,7 +35,7 @@
             <section class="section">
                 <h2>Check for Warnings</h2>
                 <div class="features">
-                <p>sample</p>
+                <p>Coming soon !</p>
                 </div>
             </section>
         </main>
