--- a/insights.html
+++ b/insights.html
@@ -35,7 +35,7 @@
             <section class="section">
                <h2>Stats and tips for you</h2>
                <div class="features">
-                   <p>sample</p>
+                   <p>Coming soon !</p>
                </div>
             </section>
         </main>
