--- a/log.html
+++ b/log.html
@@ -33,6 +33,7 @@
         <main class="homepage">
             <section class="section">
                 <h2>Check your LOG reports</h2>
+                <pre>The buttons below are just for display as of now. Working properties will be developed soon !</pre>
                 <button style="margin-bottom: 4px;">WEEKLY log</button>
                 <button style="margin-bottom: 4px;">All time log</button>
             </section>
