--- a/budget.html
+++ b/budget.html
@@ -29,7 +29,7 @@
             <a href="warnings.html"><button>WARNINGS</button></a>
             <a href="log.html"><button>Expense LOG</button></a>
             <a href="insights.html"><button>Insights AND Strategies</button></a>
-            <a href="feedback.html"><button style="background-color: rgb(245, 75, 75);width: 140px;">Issue/Feedback</button></a>
+            <a href="feedback.html"><button style="background-color: rgb(245, 75, 75);width: 140px;">Issue/  Feedback</button></a>
         </nav>
     </header>
     <main class="homepage">
@@ -38,8 +38,8 @@
             <form class="budget-form">
                 <label for="amount">Amount:</label>
                 <input type="number" id="amount" name="amount" required placeholder="Enter amount">
-                <button type="submit">Save Budget</button>
-                <button type="reset">Change Budget</button>
+                <button type="submit" style="width:50%;"">Submit</button>
+                <button type="reset" style="width:50%;">Change Budget</button>
             </form>
         </section>
     </main>
