--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                     <a href="warnings.html"><button>WARNINGS</button></a>
                     <a href="log.html"><button>Expense LOG</button></a>
                     <a href="insights.html"><button>Insights AND Strategies</button></a>
-                    <a href="feedback.html"><button style="background-color: rgb(245, 75, 75);width: 140px;">Issue/Feedback</button></a>
+                    <a href="feedback.html"><button style="background-color: rgb(245, 75, 75);width: 140px;">Issue/  Feedback</button></a>
                 </nav>
         </header>
         <main class="homepage">
@@ -42,7 +42,7 @@
                 <h2>Welcome to Predicta Expense</h2><!--headline/goal of Predicta expense-->
                     <p>Your personal expense tracker and financial predictor. Take control of your finances and predict your savings future with ease.</p>
             </section><br>
-                <h2 id="h2id">Features</h2>
+                <h2 id="h2id">Features<hr style="line-gap-override:initial;"></h2>
             <section class ="mainfeatures"> <!--feature cards-->
                 <div class="features">
                     <h3>Simple & Classy UI</h3>
