--- a/expense.html
+++ b/expense.html
@@ -29,7 +29,7 @@
                     <a href="warnings.html"><button>WARNINGS</button></a>
                     <a href="log.html"><button>Expense LOG</button></a>
                     <a href="insights.html"><button>Insights AND Strategies</button></a>
-                    <a href="feedback.html"><button style="background-color: rgb(245, 75, 75);width: 140px;">Issue/Feedback</button></a>
+                    <a href="feedback.html"><button style="background-color: rgb(245, 75, 75);width: 140px;">Issue/  Feedback</button></a>
             </nav>
         </header>
 
@@ -41,8 +41,8 @@
                         <input type="text" id="source" name="text" required placeholder="Enter Source/Item","text">
                         <label for="cost">Cost:</label>
                         <input type="number" id="cost" name="number" required placeholder="Enter cost", "number">
-                        <button type="submit" style="width:auto;">Submit</button>
-                        <button type="reset" style="width:auto;">Reset</button>
+                        <button type="submit" style="width:50%;">Submit</button>
+                        <button type="reset" style="width:50%;">Reset</button>
                     </form>
             </section>
         </main>
