Modify: feedback.html file

--- a/feedback.html
+++ b/feedback.html
@@ -45,7 +45,7 @@ Help us improve the User Experience!
         
         <pre>For Github users : (direct to Github issues tab)</pre>
         <a href="https://github.com/tecnolgd/Predicta-Expense-Web/issues"><button style="background-color: rgb(141, 230, 197);">Issue</button></a> <!--link to Github issues tab-->
-        <pre>For general users(including Github users if interested) :</pre>
+        <br><hr><pre>For general users(including Github users if interested) :</pre>
         <!--Google form link -->
         <iframe src="https://docs.google.com/forms/d/e/1FAIpQLScpgXw2PeE8icPvC4NQ79clz5CGjnJmpBIiQV5q7azBE96dEg/viewform?embedded=true" width="500" height="750" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
         <!-- End of embedded Google Form -->
